--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 <div class="declare">
         <h3 class="title">Declaration</h3>
           <p class="description">
-            I hereby declare that the furnished is true to the best of my Knowledge.
+            I hereby declare that the informaion furnished is true to the best of my Knowledge.
           </p>
    </div>
     </div>
