--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <span class="profile_name_firstName">MOHANARAJAN D</span>
             <BR>
           </h1>
-          <p class="profile_title">Student</p>
+          <p class="profile_title"></p>
           <p class="description profile_description">
           A HIGHLY ORGANISED AND HARDWORKING INDIVIDUAL LOOKING FOR A RESPONSIBLE POSITION TO GAIN PRACTICAL KNOWLEDGE
             
